# YellotMobChat

./: .env.sample  Dockerfile  LICENSE  README.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini
scripts/: start.sh
tests/: conftest.py  factory.py
tests/api/: test_chat_room.py  test_create_user.py
yellot_mob/: asgi.py  settings.py  urls.py  wsgi.py
yellot_mob/modules/chat/: admin.py  apps.py  consumer.py  middleware.py  models.py  routing.py  urls.py
yellot_mob/modules/chat/migrations/: 0001_initial.py
yellot_mob/modules/chat/serializers/: chat_message_serializers.py  chat_room_serializers.py
yellot_mob/modules/chat/views/: chat_message_viewsets.py  chat_room_viewsets.py
yellot_mob/modules/users/: apps.py  urls.py
yellot_mob/modules/users/serializers/: user_serializer.py
yellot_mob/modules/users/views/: user_viewset.py
